--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     def lifecycle_version = "2.2.0"
     def room_version = "2.3.0"
     def OkHttp3_version = "2.3.0"
+    def gson_version = "2.8.9"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -66,6 +67,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     //OkHttp3
-    implementation("com.squareup.okhttp3:okhttp:$OkHttp3_version")
-    implementation("com.squareup.okhttp3:logging-interceptor:$OkHttp3_version")
+    implementation "com.squareup.okhttp3:okhttp:$OkHttp3_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$OkHttp3_version"
+
+    //GSON
+    implementation "com.google.code.gson:gson:$gson_version"
 }
