--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //retrofit2
+    //Retrofit2
     implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit2_version"
+
+    //GSON
+    implementation "com.google.code.gson:gson:$gson_version"
 
     //Annotation processor
     kapt "androidx.room:room-compiler:$room_version"
@@ -70,6 +74,5 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$OkHttp3_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$OkHttp3_version"
 
-    //GSON
-    implementation "com.google.code.gson:gson:$gson_version"
+
 }
